Добавил станцию Чалганы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ТЧМп-11 Белогорск v.0.5</string>
     <string name="provider_gps">Статус GPS</string>
     <string name="provider_network">Координаты сети</string>
-    <string name="google_maps_key"></string>
+    <string name="google_maps_key">AIzaSyDzgh3-K-xsuNspEyPCwfxLSZYz9XK2c_g</string>
 
     <string-array name="sp_stan_otprav_bel_mgd">
 
@@ -23,6 +23,7 @@
         <item>Ту</item>
         <item>Сиваки</item>
         <item>Ушумун</item>
+        <item>Чалганы</item>
         <item>Тыгда</item>
         <item>Дактуй</item>
         <item>Красная Падь</item>
@@ -38,6 +39,7 @@
         <item>Красная Падь</item>
         <item>Дактуй</item>
         <item>Тыгда</item>
+        <item>Чалганы</item>
         <item>Ушумун</item>
         <item>Сиваки</item>
         <item>Ту</item>
